Upgrade to OpenJDK 17 (#7450)
* Updated to OpenJDK 17.0.5+8

* Switched from microsoft to temurin

* Java 11 deprecations

* Update BundlerTest.java

* Updated jetty

* Update TestHttpServer.java

* Update start_http_server.sh

* Removed use of deprecated EnvironmentVariables

* Removed use of deprecated security manager

* Update TestHttpServer.java

* Update bundle.py

* Update bundle.py

* Increased timeout

* Update bundle.py

* Updated jogl

* Added opens for sun.nio.fs

* Added opens for sun.awt.image

* Update TestHttpServer

* Disambiguate FileSystems.newFileSystem

---------

Co-authored-by: AGulev <me@agulev.com>
Co-authored-by: Vlad Protsenko <vlad@refold.io>